--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .app {
+    position: relative;
     min-height: 100vh;
-    padding: 5rem 1.5rem;
     background-color: #2f3542;
+}
+
+.app__wrapper {
+    padding: 5rem 1.5rem;
 }
