--- a/src/components/User/PrintUser/PrintUser.css
+++ b/src/components/User/PrintUser/PrintUser.css
@@ -1,8 +1,9 @@
 .print-user {
     padding: 0.5rem 1rem;
+    font-size: 1.6rem;
     border: 1px solid #747d8c;
 }
 
-.print-user p {
-    font-size: 1.6rem;
+.print-user:not(:last-child) {
+    margin-bottom: 1rem;
 }
